--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,37 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.product-section {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: red;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+  width: 150px;
+  height: 200px;
+}
+
+.product-section img{
+  max-width: 100px;
+  height: 100px;
+  margin-bottom: 5px;
+}
+
+.product-section h3 {
+  font-size: 10px;
+  margin-bottom: 1px;
+}
+
+.product-section p {
+  font-size: 15px;
+  font-weight: bold;
+}
