--- a/public/style.css
+++ b/public/style.css
@@ -20,36 +20,56 @@ form div {
   display: inline-block;
 }
 
-.products-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.content-container{
+  display: block;
+  margin: 0 auto;
 }
 
-.product-section {
+.products-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+
+.product-list-container {
+  flex: 1 0 calc(20% - 10px);
+  background-color: #EDEDED;
   display: block;
   text-align: center;
   text-decoration: none;
   color: red;
-  border: 1px solid black;
+  border: none;
   padding: 10px;
   border-radius: 5px;
-  width: 150px;
-  height: 200px;
+  /* width: 150px;
+  height: 200px; */
+  margin-top: 30px;
+  margin-left: 30px;
+  padding: 40px;
+  transition: background-color 0.3s ease;
 }
 
-.product-section img{
-  max-width: 100px;
-  height: 100px;
+.product-list-container img{
+  width: 100%;
+  min-width: 240px;
+  height: 26vh;
   margin-bottom: 5px;
 }
 
-.product-section h3 {
-  font-size: 10px;
+.product-list-container h3 {
+  color: black !important;
+  font-family: 'montserrat';
+  font-weight: 400;
+  font-size: 15px;
+  padding: none;
+  margin:none;
   margin-bottom: 1px;
 }
 
-.product-section p {
-  font-size: 15px;
-  font-weight: bold;
+.product-list-item-details{
+  display: flex;
+  justify-content: space-between;
 }
