--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  background-color: #FBFAF3;
 }
 
 a {
@@ -43,7 +44,7 @@ form div {
   text-decoration: none;
   border: none;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0px;
   /* width: 150px;
   height: 200px; */
   margin: 15px;
@@ -61,7 +62,7 @@ form div {
 .product-list-container h3 {
   font-family: 'montserrat';
   font-weight: bold;
-  font-size: 15px;
+  font-size: 12px;
   padding: none;
   margin:none;
   margin-bottom: 1px;
