--- a/public/style.css
+++ b/public/style.css
@@ -295,3 +295,61 @@ nav a:hover{
 .fancy-font{
   font-family: "Room 205";
 }
+
+
+/* users table styling */
+
+
+
+.user-list, .user-container{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-list h1, .user-container h1, .user-container h2{
+  margin-bottom: 0; 
+  width: 70%;
+}
+
+.user-list tbody tr:hover{
+  cursor: pointer;
+}
+
+/* Basic table styling */
+table {
+  margin-top: 0;
+  width: 70%;  /* Assuming you want the table to take the full width of its parent container */
+  border-collapse: collapse; /* Merge borders */
+  margin: 20px 0; /* Add some space around the table */;
+}
+
+/* Header styles */
+th {
+  background-color: #f4f4f4; /* Light grey background */
+  text-align: center;  /* Center align header text */
+  padding: 10px;
+  border: 1px solid #ddd; /* Light grey border */
+}
+
+/* Data cell styles */
+td {
+  text-align: left;  /* Left align data text */
+  padding: 10px;
+  border: 1px solid #ddd; /* Light grey border */
+}
+
+/* Row hover effect - Optional */
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+table a{
+  color: blue;
+}
+
+table a:hover{
+  color: blue;
+  text-decoration: underline;
+  font-style: italic;
+}
