fixed a bug with user and did some styling on cart

--- a/public/style.css
+++ b/public/style.css
@@ -171,6 +171,19 @@ form div {
 
 /* cart page styling */
 
+.cart-empty{
+  margin-left: 40px;
+}
+
+.cart-empty a{
+  color: blue;
+}
+
+.cart-empty a:hover{
+  font-style: italic;
+}
+
+
 .cart-page{
   width:100%;
   display: flex;
