--- a/public/style.css
+++ b/public/style.css
@@ -226,6 +226,13 @@ form div {
   margin-left: 40px;
 }
 
+@media (max-width: 600px){
+  .cart-empty{
+    margin-top: 250px;
+    margin-left: 30px;
+  }
+}
+
 .cart-empty a{
   color: blue;
 }
