--- a/public/style.css
+++ b/public/style.css
@@ -424,7 +424,15 @@ nav a:hover{
 /* users table styling */
 
 
+.inactive{
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
 
+}
 
 .user-list, .user-container{
   display:flex;
