--- a/public/style.css
+++ b/public/style.css
@@ -233,7 +233,7 @@ form div {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(200, 200, 200);
+  background-color: #FBFAF3;
   z-index: 9999;
 }
 
