--- a/public/style.css
+++ b/public/style.css
@@ -241,7 +241,7 @@ form div {
   background-color: #fff;
   padding: 20px;
   max-width: 500px;
-  height: 45%;
+  height: auto  ;
   width: 90%;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 15px;
@@ -258,6 +258,10 @@ form div {
 .modalFooter {
   text-align: center;
   margin-top: 20px;
+}
+
+.modalFooter button{
+  margin: 10px;
 }
 
 /* Add To Cart button styling */
