--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,14 @@ nav a {
   margin: 1em;
 }
 
+nav input {
+  margin-right: 10px;
+}
+
+nav i:hover{
+  cursor: pointer;
+}
+
 form div {
   margin: 1em;
   display: inline-block;
@@ -431,6 +439,7 @@ nav {
   width: 100%;
   padding-bottom: 5px;
   background-color: #FBFAF3;
+  z-index: 9999;
 }
 
 nav h2{
