--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ select{
 
 .product-list-container {
   flex: 1 0 calc(20% - 10px);
-  background-color: #f2f2f2;
+  background-color: #f7f7f7;
   display: block;
   text-align: center;
   text-decoration: none;
@@ -83,11 +83,12 @@ select{
 
 .product-list-container img{
   width: 90%;
-  /* min-width: 240px; */
-  height: auto;
+  /* min-width: 150px; */
+  height: 150px;
   margin-bottom: 0px;
   /* border-radius: 0px 90px 0px 90px; */
   transition: border-radius 0.3s ease;
+  object-fit: contain;
 }
 
 .product-list-item-details h3 {
