--- a/public/style.css
+++ b/public/style.css
@@ -640,7 +640,9 @@ table a:hover{
 
 /* Styling for the entire table */
 .item-container table {
-  width: 100%;
+  margin: 0 auto;
+  width: 70%;
+  max-width: 440px;
   border-collapse: collapse;
   margin-bottom: 20px;
 }
