--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: sans-serif;
   background-color: #FBFAF3;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -315,7 +317,7 @@ select{
   margin-left: 40px;
 }
 
-@media (max-width: 600px){
+@media (max-width: 650px){
   .cart-empty{
     margin-top: 250px;
     margin-left: 30px;
@@ -336,7 +338,7 @@ select{
   display: flex;
 }
 
-@media (max-width: 600px){
+@media (max-width: 650px){
   .cart-page{
     margin-top: 150px;
     flex-direction: column;
@@ -351,7 +353,7 @@ select{
   justify-content: center;
   width: 70%;
   max-width: 700px;
-  min-width: 350px;
+  min-width: 450px;
 }
 
 .cart-container h1{
@@ -377,16 +379,20 @@ select{
 
 .cart-item img{
   flex: 0 ;
-  width: 100px;
+  
   height: 100px;
+  aspect-ratio: 1/1;
   margin-right: 40px;
   object-fit: cover;
+  overflow: clip;
 }
 
 .cart-item-details{
   flex: 2;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .cart-item h3{
@@ -411,7 +417,8 @@ select{
 .quantity-span{
   display: flex;
   align-items: right !important; 
-  width: 100%;
+  min-width: 140px;
+  width: 50%;
   text-align: right;
 }
 
@@ -432,12 +439,17 @@ select{
   background-color: #EDEDED;
   width: 40%;
   height: fit-content;
-  padding: 50px;
+  padding: 0px 50px 0px 50px;
 }
 
-@media (max-width: 600px){
+@media (max-width: 650px){
   .cart-summary{
     margin: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
   }
 }
 
@@ -451,7 +463,7 @@ select{
 nav {
   position : fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   padding-bottom: 5px;
   background-color: #FBFAF3;
   z-index: 9999;
@@ -753,8 +765,8 @@ button {
   background-color: tan;
   color: #fff;
   padding: 10px 20px;
-  border: 1px solid black;
-  border-radius: 4px;
+  border: 8px ridge orange;
+  border-radius: 14px;
   cursor: pointer;
   margin-bottom: 50px;
 }
