--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,27 @@ select{
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  justify-content: center;
+  padding-left: 5vw;
+  justify-content: left;
+}
+
+@media(max-width: 3000px){
+  .products-container{
+    padding-left: 11vw;
+  }
+}
+
+@media (max-width: 1430px){
+  .products-container{
+    padding-left: 5vw;
+  }
+}
+
+@media (max-width: 720px) {
+  .products-container {
+    padding-left: 0;
+    justify-content: center;
+  }
 }
 
 .no-product-found{
@@ -70,40 +90,40 @@ select{
 }
 
 .products-container a{
-  flex: 1 0 calc(20% - 10px);
+  flex: 1 0 calc(15% - 10px);
+  max-width: calc(15% - 10px);
+  min-width: 200px;
 
 }
 
 
 .product-list-container {
-  flex: 1 0 calc(20% - 10px);
-  background-color: #f7f7f7;
-  display: block;
+  display: flex;
+  flex: 1 0 calc(10% - 10px);
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  text-decoration: none;
-  border: none;
-  padding: 10px;
-  border-radius: 0px;
-  margin: 15px 15px 0px 15px;
-  padding: 20px;
-  /* border-radius: 0px 90px 0px 90px; */
+  padding: 5px;
+  margin: 15px;
+  margin-bottom: 0;
+  aspect-ratio: 1/1;
   transition: border-radius 0.3s ease;
 }
+
+
 
 
 .product-list-container img{
-  width: 90%;
-  /* min-width: 150px; */
-  height: 150px;
-  margin-bottom: 0px;
-  /* border-radius: 0px 90px 0px 90px; */
-  transition: border-radius 0.3s ease;
-  object-fit: contain;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
 
 .product-list-item-details h3 {
-  font-family: 'montserrat';
-  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  text-align: left;
   font-size: 12px;
   padding: none;
   margin:none;
@@ -119,11 +139,10 @@ select{
 
 
 .product-list-container-outer{
+  display: flex;
+  flex-direction: column;
+  
   padding: 5px;
-  border-radius: 10px;
-  transition: background-color 0.2s ease;
-  transition: box-shadow 0.1s ease;
-
 }
 
 .product-list-container-outer:hover{
@@ -137,12 +156,12 @@ select{
   align-items: center;
   justify-content:space-evenly;
   text-align: center;
-  flex: 1 0 calc(20% - 10px);
   margin: 0px 15px 10px 15px;
   padding: 0px 10px 0px 10px;
   color: black;
 
 }
+
 .product-image {
   width: 200px; /* Set the desired width */
   height: 200px; /* Set the desired height */
@@ -154,6 +173,8 @@ select{
   display: flex;
   justify-content: center;
   width: 100%;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 .pagination-buttons button{
@@ -161,7 +182,6 @@ select{
 }
 
 .pageNum{
-  width: 100%;
   text-align: center;
 }
 
@@ -178,7 +198,7 @@ select{
   height: 60vh;
 }
 
-@media (max-width: 600px){
+@media (max-width: 1100px){
   .single-product-container{
     flex-direction: column;
     flex-wrap: nowrap;
@@ -189,12 +209,6 @@ select{
 
   .single-product.image{
     display: block;
-  }
-
-  .single-product-details{
-    display: block;
-    margin-right: 20px !important;
-    width: 100%;
   }
 
 }
@@ -213,9 +227,9 @@ select{
 /* Styles for the product image */
 .single-product-image img {
   display: block;
-  max-width: 100%;
-  max-height: 400px;
-  height: 70%;
+  max-width: 70%;
+  max-height: 600px;
+  /* height: 70%; */
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -224,9 +238,11 @@ select{
 /* Container for the product details */
 .single-product-details {
   flex: 1;
-  max-width: 40%;
+  max-width: 70%;
   margin: 20px;
-  margin-right: 100px;
+  display: block;
+  margin-right: 10vw !important;
+  width: 100%;
 }
 
 /* Product name styling */
@@ -257,46 +273,7 @@ select{
   margin-bottom: 20px;
 }
 
-/* Modal/thank you page styling */
-.modalBackground{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #FBFAF3;
-  z-index: 9999;
-}
 
-.modalContainer {
-  background-color: #fff;
-  padding: 20px;
-  max-width: 500px;
-  height: auto  ;
-  width: 90%;
-  border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 15px;
-}
-
-.modalTitle {
-  text-align: center;
-}
-
-.modalBody {
-  text-align: center;
-}
-
-.modalFooter {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.modalFooter button{
-  margin: 10px;
-}
 
 /* Add To Cart button styling */
 .add-to-cart-btn {
@@ -326,6 +303,7 @@ select{
 
 .cart-empty a{
   color: blue;
+  font-weight: bold;
 }
 
 .cart-empty a:hover{
@@ -335,12 +313,13 @@ select{
 
 .cart-page{
   width:100%;
+  margin-top: 100px;
   display: flex;
 }
 
 @media (max-width: 650px){
   .cart-page{
-    margin-top: 150px;
+    margin-top: 200px;
     flex-direction: column;
     align-items: center;
   }
@@ -354,6 +333,7 @@ select{
   width: 70%;
   max-width: 700px;
   min-width: 450px;
+  margin-left: 5vw
 }
 
 .cart-container h1{
@@ -415,6 +395,7 @@ select{
 }
 
 .quantity-span{
+  margin-top: 15px;
   display: flex;
   align-items: right !important; 
   min-width: 140px;
@@ -447,6 +428,8 @@ select{
     margin: 0;
     padding: 20px;
     display: flex;
+    width: 60%;
+    min-width: 300px;
     flex-direction: column;
     align-items: center;
     
@@ -467,6 +450,14 @@ nav {
   padding-bottom: 5px;
   background-color: #FBFAF3;
   z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav div{
+  display: flex;
+  align-items: center;
 }
 
 nav h2{
@@ -485,7 +476,7 @@ nav a:hover{
   text-decoration: orange wavy underline;
 } 
 
-@media (max-width: 600px){
+@media (max-width: 959px){
   nav div a:first-of-type {
     display: block;
     width: auto;
@@ -510,7 +501,6 @@ nav a:hover{
 
 /* users table styling */
 
-
 .inactive{
   pointer-events: none;
   cursor: not-allowed;
@@ -527,9 +517,14 @@ nav a:hover{
   align-items: center;
 }
 
-.user-list h1, .user-container h1, .user-container h2{
+.user-list h1, .user-container h1, .user-container h2, .user-container h3{
   margin-bottom: 0; 
   width: 70%;
+}
+
+.user-container h3{
+  font-style: italic;
+  margin-bottom: 20px;
 }
 
 .user-container span{
@@ -588,22 +583,23 @@ table {
   width: 70%;  /* Assuming you want the table to take the full width of its parent container */
   border-collapse: collapse; /* Merge borders */
   margin: 20px 0; /* Add some space around the table */;
+  background-color: #f9f9f9;
 }
 
 @media (max-width: 600px){
   table, thead, tbody, tr{
     max-width: 70% !important;
     overflow: scroll;
-    font-size: 10px;
   }
 }
 
 /* Header styles */
 th {
   background-color: #f4f4f4; /* Light grey background */
+  border: 1px solid #ddd; /* Light grey border */
+
   text-align: center;  /* Center align header text */
   padding: 10px;
-  border: 1px solid #ddd; /* Light grey border */
 }
 
 /* Data cell styles */
@@ -615,7 +611,7 @@ td {
 
 /* Row hover effect - Optional */
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: #ebebeb;
 }
 
 table a{
@@ -628,8 +624,25 @@ table a:hover{
   font-style: italic;
 }
 
+
+
+
 /* Styling for the entire form container */
+
+.checkout-container-outer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.checkout-container-outer h1{
+  width: 100%;
+  text-align: left;
+}
+
 .checkout-container {
+  width: 100%;
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
@@ -641,6 +654,8 @@ table a:hover{
 
 /*fancy font for checkout*/
 .fancy-font-checkout{
+  width: 70%;
+  text-align: left;
   font-family: "Room 205";
 }
 
@@ -651,11 +666,15 @@ table a:hover{
   margin-bottom: 5px;
 }
 
+.item-container{
+  width: 100%;
+  max-width: 440px;
+}
+
 /* Styling for the entire table */
 .item-container table {
   margin: 0 auto;
-  width: 70%;
-  max-width: 440px;
+  width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
 }
@@ -674,6 +693,7 @@ table a:hover{
   padding: 10px;
   border: 1px solid #ccc;
   text-align: center; /* Center the content */
+
 }
 
 /* Alternating row colors for better readability */
@@ -720,6 +740,7 @@ textarea {
 
 /* Styling for the entire form payment */
 .payment-container {
+  width: 100%;
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
@@ -762,13 +783,21 @@ textarea {
 
 /*Global button styling*/
 button {
-  background-color: tan;
-  color: #fff;
-  padding: 10px 20px;
-  border: 8px ridge orange;
-  border-radius: 14px;
+  background-color: #FFD4A1;
+  color: blue;
+  font-weight: bold;
+  padding: 7px 13px;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
   margin-bottom: 50px;
+  box-shadow: 0 0px 3px rgb(0 0 0 / 0.2);
+
+}
+
+button:active {
+  background-color: blue;
+  color: white;
 }
 
 .openModal:hover {
@@ -782,4 +811,55 @@ button {
     margin: 20px;
     padding: 10px;
   }
+}
+
+
+/* Modal/thank you page styling */
+.modalBackground{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FBFAF3;
+  z-index: 9999;
+}
+
+.modalContainer {
+  background-color: #fff;
+  padding: 20px;
+  max-width: 500px;
+  height: auto  ;
+  width: 90%;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 15px;
+}
+
+.modalTitle {
+  text-align: center;
+}
+
+.modalTitle h1{
+  font-size: 30px;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+}
+
+.modalBody {
+  text-align: center;
+  font-family: "Montserrat";
+  font-weight: 400
+}
+
+.modalFooter {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.modalFooter button{
+  margin: 10px;
 }
